--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^2.0.3"
 matplotlib = "^3.7.2"
 seaborn = "^0.12.2"
 statsmodels = "^0.14.0"
+watchdog = "^3.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
